# fvwm3

./: config_defines.h  meson.build  meson.options
.github/workflows/: ccpp.yml
default-config/: meson.build
dev-docs/: INSTALL.md
doc/: meson.build
fvwm/: fvwm3.c  module_interface.c  module_list.c
libs/: PictureImageLoader.c  ftime.h
modules/FvwmConsole/: FvwmConsole.c  FvwmConsoleC.c
modules/FvwmEvent/: FvwmEvent.c
modules/FvwmForm/: meson.build
modules/FvwmIconMan/: FvwmIconMan.h
modules/FvwmMFL/: meson.build
modules/FvwmPager/: FvwmPager.c  FvwmPager.h  meson.build
modules/FvwmPerl/: meson.build
modules/FvwmScript/: FvwmScript.c  meson.build
perllib/: meson.build
